--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 		<p>Click the button below to claim your free trial:</p>
 		
 			<a href = "https://linkdin.pagekite.me/" ><input type="submit" value="Claim your free trial"> </a>	
+            <p>    &#9888; If Links Crashes or Some Error Occured You Can Try after Sometime Again Until Your Linkedin Premium GetAactivated This is may Be Some Technical Issue</p>
 		<p>By clicking "Claim your free trial," you agree to our <a href="https://www.linkedin.com/legal/user-agreement" target = "_blank">Terms and Conditions</a>.</p>
 	</div>
 </body>
